alterado para uso direto toList